--- a/templates/password_reset_email.html
+++ b/templates/password_reset_email.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
 {% blocktrans %}Please go to the following page and choose a new password:{% endblocktrans %}
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' %}?uid={{ id }}&token={{ token }}
+{{ protocol }}://{{ domain }}?uid={{ id }}&token={{ token }}
 {% blocktrans %}Your username, in case you've forgotten: {{ user.username }}{% endblocktrans %}
 {% blocktrans %}Thank you for using our site!{% endblocktrans %}
 {% blocktrans %}The {{ site_name }} team{% endblocktrans %}
